// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gabliam instance 1`] = `
Object {
  "application": Object {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance 2`] = `
Object {
  "configPath": "<PROJECT_ROOT>/__tests__/fixtures/gabliam/config",
  "scanPath": "<PROJECT_ROOT>/__tests__/fixtures/gabliam",
}
`;

exports[`gabliam instance 3`] = `
TestService {
  "dbConfig": DbConfig {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance 4`] = `
DbConfig {
  "db": "test",
  "host": "127.0.0.1",
}
`;

exports[`gabliam instance with default config 1`] = `
Object {
  "configPath": "/Users/eyolas/Documents/devperso/js/gabliam/core",
  "scanPath": "/Users/eyolas/Documents/devperso/js/gabliam/core",
}
`;

exports[`gabliam instance with path 1`] = `Object {}`;

exports[`gabliam instance with path 2`] = `
Object {
  "configPath": "<PROJECT_ROOT>/__tests__/fixtures/gabliam",
  "scanPath": "<PROJECT_ROOT>/__tests__/fixtures/gabliam",
}
`;

exports[`gabliam instance with path 3`] = `
TestService {
  "dbConfig": DbConfig {
    "db": undefined,
    "host": undefined,
  },
}
`;

exports[`gabliam instance with path 4`] = `
DbConfig {
  "db": undefined,
  "host": undefined,
}
`;

exports[`test plugin with config gabliam build 1`] = `1`;
